--- a/src/app/tests/suites/certification/Test_TC_LCFG_3_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_LCFG_3_1.yaml
@@ -14,7 +14,7 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    101.3.1. [TC-LCFG-3.1] Localization Configuration Cluster
+    99.3.1. [TC-LCFG-3.1] Localization Configuration Cluster
     Attributes[DUT-Client]
 
 config:
@@ -24,6 +24,7 @@ config:
 
 tests:
     - label: "DUT reads SupportedLocales attribute from TH"
+      PICS: LCFG.C.A0001
       verification: |
           ./chip-tool localizationconfiguration read supported-locales 1 0
 
@@ -49,6 +50,7 @@ tests:
       disabled: true
 
     - label: "DUT reads ActiveLocale attribute from the TH"
+      PICS: LCFG.C.A0000
       verification: |
           ./chip-tool localizationconfiguration read active-locale 1 0
 
@@ -67,15 +69,15 @@ tests:
           [1651564394.280245][8392:8397] CHIP:DMG:                                         Cluster = 0x2b,
           [1651564394.280314][8392:8397] CHIP:DMG:                                         Attribute = 0x0000_0001,
           [1651564394.280376][8392:8397] CHIP:DMG:                                 }
-          [1651564394.280440][8392:8397] CHIP:DMG:
-          [1651564394.280509][8392:8397] CHIP:DMG:                                         Data = "en-US",
+          [1651564394.280440][8392:8397] CHIP:DMG:                                         
+          [1651564394.280509][8392:8397] CHIP:DMG:                                         Data = "en-US", 
           [1651564394.280574][8392:8397] CHIP:DMG:                         },
-          [1651564394.280641][8392:8397] CHIP:DMG:
+          [1651564394.280641][8392:8397] CHIP:DMG:                         
           [1651564394.280691][8392:8397] CHIP:DMG:                 },
-          [1651564394.280750][8392:8397] CHIP:DMG:
+          [1651564394.280750][8392:8397] CHIP:DMG:                 
           [1651564394.280797][8392:8397] CHIP:DMG:         ],
-          [1651564394.280853][8392:8397] CHIP:DMG:
-          [1651564394.280898][8392:8397] CHIP:DMG:         SuppressResponse = true,
+          [1651564394.280853][8392:8397] CHIP:DMG:         
+          [1651564394.280898][8392:8397] CHIP:DMG:         SuppressResponse = true, 
           [1651564394.280944][8392:8397] CHIP:DMG:         InteractionModelRevision = 1
           [1651564394.280986][8392:8397] CHIP:DMG: }
           [1651564394.281211][8392:8397] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_002B Attribute 0x0000_0001 DataVersion: 1726343234
