--- a/src/app/tests/suites/certification/Test_TC_TM_2_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_TM_2_2.yaml
@@ -29,6 +29,7 @@ tests:
                 value: nodeId
 
     - label: "read the mandatory attribute: MinMeasuredValue"
+      PICS: TM.S.A0001
       command: "readAttribute"
       attribute: "MinMeasuredValue"
       response:
@@ -38,6 +39,7 @@ tests:
               maxValue: 32766
 
     - label: "read the mandatory attribute: MaxMeasuredValue"
+      PICS: TM.S.A0002
       command: "readAttribute"
       attribute: "MaxMeasuredValue"
       response:
@@ -47,16 +49,16 @@ tests:
               maxValue: 32767
 
     - label: "Reads MeasuredValue attribute from DUT"
+      PICS: TM.S.A0000
       command: "readAttribute"
       attribute: "MeasuredValue"
-      PICS: A_TEMPERATURE
       response:
           saveAs: valueBeforeChange
           constraints:
               type: uint16
 
     - label: "Operate on device to change the temperature significantly"
-      PICS: MANUAL_TEMPERATURE_CHANGE
+      PICS: TM.M.ManuallyControlled
       cluster: "LogCommands"
       command: "Log"
       arguments:
@@ -68,7 +70,7 @@ tests:
     - label: "Read the mandatory attribute: MeasuredValue"
       command: "readAttribute"
       attribute: "MeasuredValue"
-      PICS: A_TEMPERATURE
+      PICS: TM.S.A0000
       response:
           constraints:
               type: uint16
