Go back to skipping tests we used to skip.

--- a/src/darwin/Framework/Matter.xcodeproj/xcshareddata/xcschemes/Matter Framework Tests.xcscheme
+++ b/src/darwin/Framework/Matter.xcodeproj/xcshareddata/xcschemes/Matter Framework Tests.xcscheme
@@ -39,13 +39,13 @@
             </BuildableReference>
             <SkippedTests>
                <Test
-                  Identifier = "CHIPDeviceTests">
+                  Identifier = "MTRDeviceTests">
                </Test>
                <Test
-                  Identifier = "CHIPRemoteDeviceSampleTests">
+                  Identifier = "MTRRemoteDeviceSampleTests">
                </Test>
                <Test
-                  Identifier = "CHIPXPCListenerSampleTests">
+                  Identifier = "MTRXPCListenerSampleTests">
                </Test>
             </SkippedTests>
          </TestableReference>
