--- a/examples/lighting-app/bouffalolab/bl602/BUILD.gn
+++ b/examples/lighting-app/bouffalolab/bl602/BUILD.gn
@@ -67,9 +67,7 @@ bl602_sdk("sdk") {
   ]
 
   if (chip_enable_pw_rpc) {
-    defines += [
-      "PW_RPC_ENABLED",
-    ]
+    defines += [ "PW_RPC_ENABLED" ]
   }
 }
 
@@ -123,6 +121,7 @@ bl602_executable("lighting_app") {
       "PW_RPC_DESCRIPTOR_SERVICE=1",
       "PW_RPC_DEVICE_SERVICE=1",
       "PW_RPC_LIGHTING_SERVICE=1",
+
       #"PW_RPC_OTCLI_SERVICE=1",
       #"PW_RPC_THREAD_SERVICE=1",
       #"PW_RPC_TRACING_SERVICE=1",
@@ -138,6 +137,7 @@ bl602_executable("lighting_app") {
     deps += [
       "$dir_pw_hdlc:rpc_channel_output",
       "$dir_pw_stream:sys_io_stream",
+
       #"$dir_pw_trace",
       #"$dir_pw_trace_tokenized",
       #"$dir_pw_trace_tokenized:trace_rpc_service",
@@ -147,6 +147,7 @@ bl602_executable("lighting_app") {
       "${chip_root}/examples/common/pigweed:descriptor_service.nanopb_rpc",
       "${chip_root}/examples/common/pigweed:device_service.nanopb_rpc",
       "${chip_root}/examples/common/pigweed:lighting_service.nanopb_rpc",
+
       #"${chip_root}/examples/common/pigweed:ot_cli_service.nanopb_rpc",
       #"${chip_root}/examples/common/pigweed:thread_service.nanopb_rpc",
       "${examples_plat_dir}/pw_sys_io:pw_sys_io_bl602",
