--- a/src/app/tests/suites/certification/Test_TC_DGGEN_3_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DGGEN_3_1.yaml
@@ -21,12 +21,8 @@ config:
     endpoint: 0
 
 tests:
-    - label: "Commission DUT to TH"
-      verification: |
-
-      disabled: true
-
     - label: "TH reads NetworkInterfaces structure attribute from DUT."
+      PICS: DGGEN.S.A0000
       verification: |
           ./chip-tool generaldiagnostics read network-interfaces 1 0
           [1654682355.830733][32933:32938] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0033 Attribute 0x0000_0000 DataVersion: 2161135285
@@ -164,6 +160,7 @@ tests:
     - label:
           "TH reads a RebootCount attribute value from DUT. Then a DUT (node)
           gets rebooted more than 2 times."
+      PICS: DGGEN.S.A0001
       verification: |
           ./chip-tool generaldiagnostics read reboot-count 1 0
 
@@ -182,15 +179,15 @@ tests:
           [1650873646.873915][19568:19573] CHIP:DMG:                                         Cluster = 0x33,
           [1650873646.873974][19568:19573] CHIP:DMG:                                         Attribute = 0x0000_0001,
           [1650873646.874028][19568:19573] CHIP:DMG:                                 }
-          [1650873646.874085][19568:19573] CHIP:DMG:
-          [1650873646.874137][19568:19573] CHIP:DMG:                                         Data = 2,
+          [1650873646.874085][19568:19573] CHIP:DMG:                                         
+          [1650873646.874137][19568:19573] CHIP:DMG:                                         Data = 2, 
           [1650873646.874190][19568:19573] CHIP:DMG:                         },
-          [1650873646.874247][19568:19573] CHIP:DMG:
+          [1650873646.874247][19568:19573] CHIP:DMG:                         
           [1650873646.874291][19568:19573] CHIP:DMG:                 },
-          [1650873646.874344][19568:19573] CHIP:DMG:
+          [1650873646.874344][19568:19573] CHIP:DMG:                 
           [1650873646.874383][19568:19573] CHIP:DMG:         ],
-          [1650873646.874432][19568:19573] CHIP:DMG:
-          [1650873646.874472][19568:19573] CHIP:DMG:         SuppressResponse = true,
+          [1650873646.874432][19568:19573] CHIP:DMG:         
+          [1650873646.874472][19568:19573] CHIP:DMG:         SuppressResponse = true, 
           [1650873646.874514][19568:19573] CHIP:DMG:         InteractionModelRevision = 1
           [1650873646.874552][19568:19573] CHIP:DMG: }
           [1650873646.874760][19568:19573] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0033 Attribute 0x0000_0001 DataVersion: 2777668989
@@ -201,6 +198,7 @@ tests:
     - label:
           "DUT reboots and TH reads a UpTime attribute value of DUT since some
           arbitrary start time of DUT rebooting."
+      PICS: DGGEN.S.A0002
       verification: |
           ./chip-tool generaldiagnostics read up-time 1 0
           [1650877936.461150][2360:2365] CHIP:DMG: ReportDataMessage =
@@ -218,15 +216,15 @@ tests:
           [1650877936.461700][2360:2365] CHIP:DMG:                                         Cluster = 0x33,
           [1650877936.461749][2360:2365] CHIP:DMG:                                         Attribute = 0x0000_0002,
           [1650877936.461790][2360:2365] CHIP:DMG:                                 }
-          [1650877936.461837][2360:2365] CHIP:DMG:
-          [1650877936.461893][2360:2365] CHIP:DMG:                                         Data = 368,
+          [1650877936.461837][2360:2365] CHIP:DMG:                                         
+          [1650877936.461893][2360:2365] CHIP:DMG:                                         Data = 368, 
           [1650877936.461937][2360:2365] CHIP:DMG:                         },
-          [1650877936.461991][2360:2365] CHIP:DMG:
+          [1650877936.461991][2360:2365] CHIP:DMG:                         
           [1650877936.462030][2360:2365] CHIP:DMG:                 },
-          [1650877936.462075][2360:2365] CHIP:DMG:
+          [1650877936.462075][2360:2365] CHIP:DMG:                 
           [1650877936.462110][2360:2365] CHIP:DMG:         ],
-          [1650877936.462155][2360:2365] CHIP:DMG:
-          [1650877936.462192][2360:2365] CHIP:DMG:         SuppressResponse = true,
+          [1650877936.462155][2360:2365] CHIP:DMG:         
+          [1650877936.462192][2360:2365] CHIP:DMG:         SuppressResponse = true, 
           [1650877936.462229][2360:2365] CHIP:DMG:         InteractionModelRevision = 1
           [1650877936.462263][2360:2365] CHIP:DMG: }
           [1650877936.462457][2360:2365] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0033 Attribute 0x0000_0002 DataVersion: 3419113433
@@ -234,6 +232,7 @@ tests:
       disabled: true
 
     - label: "TH reads a TotalOpreationalHours attribute value from DUT."
+      PICS: DGGEN.S.A0003
       verification: |
           ./chip-tool generaldiagnostics read total-operational-hours 1 0
 
@@ -252,15 +251,15 @@ tests:
           [1650877969.903488][2369:2374] CHIP:DMG:                                         Cluster = 0x33,
           [1650877969.903545][2369:2374] CHIP:DMG:                                         Attribute = 0x0000_0003,
           [1650877969.903596][2369:2374] CHIP:DMG:                                 }
-          [1650877969.903647][2369:2374] CHIP:DMG:
-          [1650877969.903697][2369:2374] CHIP:DMG:                                         Data = 0,
+          [1650877969.903647][2369:2374] CHIP:DMG:                                         
+          [1650877969.903697][2369:2374] CHIP:DMG:                                         Data = 0, 
           [1650877969.903746][2369:2374] CHIP:DMG:                         },
-          [1650877969.903797][2369:2374] CHIP:DMG:
+          [1650877969.903797][2369:2374] CHIP:DMG:                         
           [1650877969.903837][2369:2374] CHIP:DMG:                 },
-          [1650877969.903886][2369:2374] CHIP:DMG:
+          [1650877969.903886][2369:2374] CHIP:DMG:                 
           [1650877969.903921][2369:2374] CHIP:DMG:         ],
-          [1650877969.903966][2369:2374] CHIP:DMG:
-          [1650877969.904002][2369:2374] CHIP:DMG:         SuppressResponse = true,
+          [1650877969.903966][2369:2374] CHIP:DMG:         
+          [1650877969.904002][2369:2374] CHIP:DMG:         SuppressResponse = true, 
           [1650877969.904038][2369:2374] CHIP:DMG:         InteractionModelRevision = 1
           [1650877969.904072][2369:2374] CHIP:DMG: }
           [1650877969.904265][2369:2374] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0033 Attribute 0x0000_0003 DataVersion: 3419113433
@@ -269,6 +268,7 @@ tests:
 
     - label:
           "DUT undergoes a reboot process. TH reads a attribute value from DUT."
+      PICS: DGGEN.S.A0004
       verification: |
           ./chip-tool generaldiagnostics read boot-reasons 1 0
 
@@ -287,15 +287,15 @@ tests:
           [1650877998.692108][2377:2382] CHIP:DMG:                                         Cluster = 0x33,
           [1650877998.692167][2377:2382] CHIP:DMG:                                         Attribute = 0x0000_0004,
           [1650877998.692224][2377:2382] CHIP:DMG:                                 }
-          [1650877998.692280][2377:2382] CHIP:DMG:
-          [1650877998.692341][2377:2382] CHIP:DMG:                                         Data = 0,
+          [1650877998.692280][2377:2382] CHIP:DMG:                                         
+          [1650877998.692341][2377:2382] CHIP:DMG:                                         Data = 0, 
           [1650877998.692401][2377:2382] CHIP:DMG:                         },
-          [1650877998.692453][2377:2382] CHIP:DMG:
+          [1650877998.692453][2377:2382] CHIP:DMG:                         
           [1650877998.692498][2377:2382] CHIP:DMG:                 },
-          [1650877998.692553][2377:2382] CHIP:DMG:
+          [1650877998.692553][2377:2382] CHIP:DMG:                 
           [1650877998.692597][2377:2382] CHIP:DMG:         ],
-          [1650877998.692652][2377:2382] CHIP:DMG:
-          [1650877998.692698][2377:2382] CHIP:DMG:         SuppressResponse = true,
+          [1650877998.692652][2377:2382] CHIP:DMG:         
+          [1650877998.692698][2377:2382] CHIP:DMG:         SuppressResponse = true, 
           [1650877998.692744][2377:2382] CHIP:DMG:         InteractionModelRevision = 1
           [1650877998.692787][2377:2382] CHIP:DMG: }
           [1650877998.693012][2377:2382] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0033 Attribute 0x0000_0004 DataVersion: 3419113433
@@ -305,8 +305,9 @@ tests:
     - label:
           "TH reads ActiveHardwareFaults attribute value from DUT. Subscription
           is possible option for this attribute."
+      PICS: DGGEN.S.A0005
       verification: |
-          ./chip-tool generaldiagnostics read active-hardware-faults 1 0
+          ./chip-tool generaldiagnostics read active-hardware-faults 1 0 
           [1650878034.131791][2385:2390] CHIP:DMG: ReportDataMessage =
           [1650878034.131846][2385:2390] CHIP:DMG: {
           [1650878034.131890][2385:2390] CHIP:DMG:         AttributeReportIBs =
@@ -322,17 +323,17 @@ tests:
           [1650878034.132444][2385:2390] CHIP:DMG:                                         Cluster = 0x33,
           [1650878034.132546][2385:2390] CHIP:DMG:                                         Attribute = 0x0000_0005,
           [1650878034.132612][2385:2390] CHIP:DMG:                                 }
-          [1650878034.132666][2385:2390] CHIP:DMG:
+          [1650878034.132666][2385:2390] CHIP:DMG:                                         
           [1650878034.132730][2385:2390] CHIP:DMG:                                         Data = [
-          [1650878034.132798][2385:2390] CHIP:DMG:
+          [1650878034.132798][2385:2390] CHIP:DMG:                                                 
           [1650878034.132849][2385:2390] CHIP:DMG:                                         ],
           [1650878034.132963][2385:2390] CHIP:DMG:                         },
-          [1650878034.133022][2385:2390] CHIP:DMG:
+          [1650878034.133022][2385:2390] CHIP:DMG:                         
           [1650878034.133074][2385:2390] CHIP:DMG:                 },
-          [1650878034.133159][2385:2390] CHIP:DMG:
+          [1650878034.133159][2385:2390] CHIP:DMG:                 
           [1650878034.133197][2385:2390] CHIP:DMG:         ],
-          [1650878034.133254][2385:2390] CHIP:DMG:
-          [1650878034.133291][2385:2390] CHIP:DMG:         SuppressResponse = true,
+          [1650878034.133254][2385:2390] CHIP:DMG:         
+          [1650878034.133291][2385:2390] CHIP:DMG:         SuppressResponse = true, 
           [1650878034.133342][2385:2390] CHIP:DMG:         InteractionModelRevision = 1
           [1650878034.133471][2385:2390] CHIP:DMG: }
           [1650878034.133792][2385:2390] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0033 Attribute 0x0000_0005 DataVersion: 3419113433
@@ -342,8 +343,9 @@ tests:
     - label:
           "TH reads ActiveRadioFaults attribute value from DUT. Subscription is
           possible option for this attribute"
+      PICS: DGGEN.S.A0006
       verification: |
-          ./chip-tool generaldiagnostics read active-radio-faults 1 0
+          ./chip-tool generaldiagnostics read active-radio-faults 1 0 
 
           [1650878056.264551][2391:2396] CHIP:DMG: ReportDataMessage =
           [1650878056.264600][2391:2396] CHIP:DMG: {
@@ -360,17 +362,17 @@ tests:
           [1650878056.265211][2391:2396] CHIP:DMG:                                         Cluster = 0x33,
           [1650878056.265268][2391:2396] CHIP:DMG:                                         Attribute = 0x0000_0006,
           [1650878056.265331][2391:2396] CHIP:DMG:                                 }
-          [1650878056.265395][2391:2396] CHIP:DMG:
+          [1650878056.265395][2391:2396] CHIP:DMG:                                         
           [1650878056.265455][2391:2396] CHIP:DMG:                                         Data = [
-          [1650878056.265523][2391:2396] CHIP:DMG:
+          [1650878056.265523][2391:2396] CHIP:DMG:                                                 
           [1650878056.265581][2391:2396] CHIP:DMG:                                         ],
           [1650878056.265642][2391:2396] CHIP:DMG:                         },
-          [1650878056.265704][2391:2396] CHIP:DMG:
+          [1650878056.265704][2391:2396] CHIP:DMG:                         
           [1650878056.265754][2391:2396] CHIP:DMG:                 },
-          [1650878056.265814][2391:2396] CHIP:DMG:
+          [1650878056.265814][2391:2396] CHIP:DMG:                 
           [1650878056.265858][2391:2396] CHIP:DMG:         ],
-          [1650878056.265912][2391:2396] CHIP:DMG:
-          [1650878056.265957][2391:2396] CHIP:DMG:         SuppressResponse = true,
+          [1650878056.265912][2391:2396] CHIP:DMG:         
+          [1650878056.265957][2391:2396] CHIP:DMG:         SuppressResponse = true, 
           [1650878056.266003][2391:2396] CHIP:DMG:         InteractionModelRevision = 1
           [1650878056.266049][2391:2396] CHIP:DMG: }
           [1650878056.266314][2391:2396] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0033 Attribute 0x0000_0006 DataVersion: 3419113433
@@ -380,8 +382,9 @@ tests:
     - label:
           "TH reads ActiveNetworkFaults attribute value from DUT. Subscription
           is possible option for this attribute."
+      PICS: DGGEN.S.A0007
       verification: |
-          ./chip-tool generaldiagnostics read active-network-faults 1 0
+          ./chip-tool generaldiagnostics read active-network-faults 1 0 
           [1650878077.693017][2399:2404] CHIP:DMG: ReportDataMessage =
           [1650878077.693056][2399:2404] CHIP:DMG: {
           [1650878077.693088][2399:2404] CHIP:DMG:         AttributeReportIBs =
@@ -397,17 +400,17 @@ tests:
           [1650878077.693569][2399:2404] CHIP:DMG:                                         Cluster = 0x33,
           [1650878077.693619][2399:2404] CHIP:DMG:                                         Attribute = 0x0000_0007,
           [1650878077.693662][2399:2404] CHIP:DMG:                                 }
-          [1650878077.693712][2399:2404] CHIP:DMG:
+          [1650878077.693712][2399:2404] CHIP:DMG:                                         
           [1650878077.693759][2399:2404] CHIP:DMG:                                         Data = [
-          [1650878077.693808][2399:2404] CHIP:DMG:
+          [1650878077.693808][2399:2404] CHIP:DMG:                                                 
           [1650878077.693858][2399:2404] CHIP:DMG:                                         ],
           [1650878077.693906][2399:2404] CHIP:DMG:                         },
-          [1650878077.693956][2399:2404] CHIP:DMG:
+          [1650878077.693956][2399:2404] CHIP:DMG:                         
           [1650878077.693993][2399:2404] CHIP:DMG:                 },
-          [1650878077.694040][2399:2404] CHIP:DMG:
+          [1650878077.694040][2399:2404] CHIP:DMG:                 
           [1650878077.694075][2399:2404] CHIP:DMG:         ],
-          [1650878077.694119][2399:2404] CHIP:DMG:
-          [1650878077.694155][2399:2404] CHIP:DMG:         SuppressResponse = true,
+          [1650878077.694119][2399:2404] CHIP:DMG:         
+          [1650878077.694155][2399:2404] CHIP:DMG:         SuppressResponse = true, 
           [1650878077.694192][2399:2404] CHIP:DMG:         InteractionModelRevision = 1
           [1650878077.694229][2399:2404] CHIP:DMG: }
           [1650878077.694616][2399:2404] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0033 Attribute 0x0000_0007 DataVersion: 3419113433
@@ -418,6 +421,7 @@ tests:
           "TH reads TestEventTriggersEnabled attribute value. If this value is
           set True, then a certain test mode will be performed (or triggered)
           according to pre-provisioned client and server test mode."
+      PICS: DGGEN.S.A0008
       verification: |
           ./chip-tool generaldiagnostics read   test-event-triggers-enabled  1 0
 
