--- a/src/app/tests/suites/certification/Test_TC_DGGEN_2_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DGGEN_2_2.yaml
@@ -26,19 +26,21 @@ tests:
           ENUM table 11.11.6.1. (Ex. Pull the DUT power plug off causing power
           source failure, and rejoin DUT back to previous TH fabric. Next,
           repeat power plug off and rejoining DUT back to previous TH fabric one
-          more time"
+          more time.)"
+      PICS: DGGEN.S.E00
       verification: |
           ./chip-tool generaldiagnostics read-event hardware-fault-change 1 0
 
           CHIP:DMG: ReportDataMessage =
           [1651562132.028543][7867:7872] CHIP:DMG: {
-          [1651562132.028586][7867:7872] CHIP:DMG:         SuppressResponse = true,
+          [1651562132.028586][7867:7872] CHIP:DMG:         SuppressResponse = true, 
           [1651562132.028632][7867:7872] CHIP:DMG:         InteractionModelRevision = 1
           [1651562132.028675][7867:7872] CHIP:DMG: }
           [1651562132.028788][7867:7872] CHIP:EM: Sending Standalone Ack for MessageCounter:10343932 on exchange 65462i
       disabled: true
 
     - label: "TH initiates the subscription of HardwareFault event from DUT."
+      PICS: DGGEN.S.E00
       verification: |
           sudo ./chip-tool generaldiagnostics subscribe-event hardware-fault-change 100 1000 1 0
 
@@ -58,22 +60,24 @@ tests:
 
     - label:
           "Induce a DUT radio failure two times as addressed in RadioFault ENUM
-          table 11.11.6.2. Ex. Put the DUT under metalic cover causing WiFi
+          table 11.11.6.2. (Ex. Put the DUT under metalic cover causing WiFi
           failure. Uncover DUT and make DUT rejoining DUT back to previous TH
           fabric. Repeat the radio failure one more time and rejoin DUT back to
           previous TH fabric."
+      PICS: DGGEN.S.E01
       verification: |
           ./chip-tool generaldiagnostics read-event radio-fault-change 1 0
 
           CHIP:DMG: ReportDataMessage =
           [1651562132.028543][7867:7872] CHIP:DMG: {
-          [1651562132.028586][7867:7872] CHIP:DMG:         SuppressResponse = true,
+          [1651562132.028586][7867:7872] CHIP:DMG:         SuppressResponse = true, 
           [1651562132.028632][7867:7872] CHIP:DMG:         InteractionModelRevision = 1
           [1651562132.028675][7867:7872] CHIP:DMG: }
           [1651562132.028788][7867:7872] CHIP:EM: Sending Standalone Ack for MessageCounter:10343932 on exchange 65462i
       disabled: true
 
     - label: "TH initiates the subscription of RadioFault event from DUT."
+      PICS: DGGEN.S.E01
       verification: |
           sudo ./chip-tool generaldiagnostics subscribe-event radio-fault-change 100 1000 1 0
 
@@ -93,22 +97,24 @@ tests:
 
     - label:
           "Induce a DUT radio failure two times as addressed in NetworkFault
-          ENUM table 11.11.6.3. Ex. Put the DUT under metalic cover causing
+          ENUM table 11.11.6.3. (Ex. Put the DUT under metalic cover causing
           network failure. Uncover DUT and rejoin DUT back to previous TH
           fabric. Pull the DUT power plug off causing power source failure.
-          rejoining DUT back to previous TH fabric."
+          rejoining DUT back to previous TH fabric.)"
+      PICS: DGGEN.S.E02
       verification: |
           ./chip-tool generaldiagnostics read-event network-fault-change 1 0
 
           CHIP:DMG: ReportDataMessage =
           [1651562132.028543][7867:7872] CHIP:DMG: {
-          [1651562132.028586][7867:7872] CHIP:DMG:         SuppressResponse = true,
+          [1651562132.028586][7867:7872] CHIP:DMG:         SuppressResponse = true, 
           [1651562132.028632][7867:7872] CHIP:DMG:         InteractionModelRevision = 1
           [1651562132.028675][7867:7872] CHIP:DMG: }
           [1651562132.028788][7867:7872] CHIP:EM: Sending Standalone Ack for MessageCounter:10343932 on exchange 65462i
       disabled: true
 
     - label: "TH initiates the subscription of NetworkFault event from DUT."
+      PICS: DGGEN.S.E02
       verification: |
           sudo ./chip-tool generaldiagnostics subscribe-event network-fault-change 100 1000 1 0
           [1653659901.757441][242605:242610] CHIP:EM: Received message of type 0x4 with protocolId (0, 1) and MessageCounter:11933575 on exchange 20223i
@@ -128,6 +134,7 @@ tests:
     - label:
           "Reboot DUT with a normal reboot process. Rejoin DUT back to previous
           TH fabric."
+      PICS: DGGEN.S.E03
       verification: |
           ./chip-tool generaldiagnostics read-event boot-reason 1 0
 
