--- a/src/app/tests/suites/certification/Test_TC_PS_2_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_PS_2_2.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
-name: 33.2.2. [TC-PRS-2.2] Primary functionality with server as DUT
+name: 62.2.2. [TC-PS-2.2] Event reporting with server as DUT
 
 config:
     nodeId: 0x12344321
@@ -27,11 +27,13 @@ tests:
       disabled: true
 
     - label: "Bring the DUT into a state without any wired faults."
+      PICS: PS.S.A000a
       verification: |
 
       disabled: true
 
     - label: "TH reads the ActiveWiredFaults attribute from the DUT"
+      PICS: PS.S.A000a
       verification: |
           ./chip-tool powersource read active-wired-faults 1 1
 
@@ -40,6 +42,7 @@ tests:
       disabled: true
 
     - label: "Set up subscription to WiredFaultChange event"
+      PICS: PS.S.E00
       verification: |
           ./chip-tool interactive start
 
@@ -47,7 +50,7 @@ tests:
 
           [1651671151.484803][6266:6266] CHIP:DMG: SubscribeRequestMessage =
           [1651671151.484857][6266:6266] CHIP:DMG: {
-          [1651671151.484907][6266:6266] CHIP:DMG:         KeepSubscriptions = false,
+          [1651671151.484907][6266:6266] CHIP:DMG:         KeepSubscriptions = false, 
           [1651671151.484968][6266:6266] CHIP:DMG:         MinIntervalFloorSeconds = 0x78,
           [1651671151.485025][6266:6266] CHIP:DMG:         MaxIntervalCeilingSeconds = 0xe10,
           [1651671151.485069][6266:6266] CHIP:DMG:         EventPathIBs =
@@ -58,21 +61,23 @@ tests:
           [1651671151.485368][6266:6266] CHIP:DMG:                         Cluster = 0x2f,
           [1651671151.485439][6266:6266] CHIP:DMG:                         Event = 0x0,
           [1651671151.485510][6266:6266] CHIP:DMG:                 },
-          [1651671151.485570][6266:6266] CHIP:DMG:
+          [1651671151.485570][6266:6266] CHIP:DMG:                 
           [1651671151.485620][6266:6266] CHIP:DMG:         ],
-          [1651671151.485679][6266:6266] CHIP:DMG:
-          [1651671151.485731][6266:6266] CHIP:DMG:         isFabricFiltered = true,
+          [1651671151.485679][6266:6266] CHIP:DMG:         
+          [1651671151.485731][6266:6266] CHIP:DMG:         isFabricFiltered = true, 
           [1651671151.485784][6266:6266] CHIP:DMG:         InteractionModelRevision = 1
           [1651671151.485827][6266:6266] CHIP:DMG: },
           [1651671151.485956][6266:6266] CHIP:DMG: Final negotiated min/max parameters: Min = 120s, Max = 3600s
       disabled: true
 
     - label: "Bring the DUT into a wired fault state."
+      PICS: PS.S.E00
       verification: |
           DUT ACTION REQUIRED
       disabled: true
 
     - label: "TH reads the ActiveWiredFaults attribute from the DUT"
+      PICS: PS.S.A000a
       verification: |
           ./chip-tool powersource read active-wired-faults 1 1
 
@@ -81,16 +86,19 @@ tests:
       disabled: true
 
     - label: "Bring the DUT back into a clean state."
+      PICS: PS.S.E00
       verification: |
           DUT ACTION REQUIRED
       disabled: true
 
     - label: "Bring the DUT into a state without any battery faults."
+      PICS: PS.S.A0012
       verification: |
 
       disabled: true
 
     - label: "TH reads the ActiveBatFaults attribute from the DUT"
+      PICS: PS.S.A0012
       verification: |
           ./apps/chip-tool powersource read active-battery-faults 12345 1
 
@@ -99,13 +107,14 @@ tests:
       disabled: true
 
     - label: "Set up subscription to BatFaultChange event"
+      PICS: PS.S.E01
       verification: |
           ./chip-tool interactive start
            powersource subscribe-event-by-id  0 100 1  1
 
            SubscribeRequestMessage =
           [1651667556.522349][6266:6266] CHIP:DMG: {
-          [1651667556.522399][6266:6266] CHIP:DMG:         KeepSubscriptions = false,
+          [1651667556.522399][6266:6266] CHIP:DMG:         KeepSubscriptions = false, 
           [1651667556.522454][6266:6266] CHIP:DMG:         MinIntervalFloorSeconds = 0x0,
           [1651667556.522512][6266:6266] CHIP:DMG:         MaxIntervalCeilingSeconds = 0x64,
           [1651667556.522564][6266:6266] CHIP:DMG:         EventPathIBs =
@@ -116,21 +125,23 @@ tests:
           [1651667556.522897][6266:6266] CHIP:DMG:                         Cluster = 0x2f,
           [1651667556.522965][6266:6266] CHIP:DMG:                         Event = 0x1,
           [1651667556.523026][6266:6266] CHIP:DMG:                 },
-          [1651667556.523090][6266:6266] CHIP:DMG:
+          [1651667556.523090][6266:6266] CHIP:DMG:                 
           [1651667556.523140][6266:6266] CHIP:DMG:         ],
-          [1651667556.523199][6266:6266] CHIP:DMG:
-          [1651667556.523243][6266:6266] CHIP:DMG:         isFabricFiltered = true,
+          [1651667556.523199][6266:6266] CHIP:DMG:         
+          [1651667556.523243][6266:6266] CHIP:DMG:         isFabricFiltered = true, 
           [1651667556.523296][6266:6266] CHIP:DMG:         InteractionModelRevision = 1
           [1651667556.523344][6266:6266] CHIP:DMG: },
           [1651667556.523471][6266:6266] CHIP:DMG: Final negotiated min/max parameters: Min = 0s, Max = 100s
       disabled: true
 
     - label: "Bring the DUT into a battery fault state."
+      PICS: PS.S.E01
       verification: |
           DUT ACTION REQUIRED
       disabled: true
 
     - label: "TH reads the ActiveBatFaults attribute from the DUT"
+      PICS: PS.S.A0012
       verification: |
           ./chip-tool powersource read active-battery-faults 1 1
 
@@ -138,16 +149,19 @@ tests:
       disabled: true
 
     - label: "Bring the DUT back into a clean state."
+      PICS: PS.S.E01
       verification: |
           DUT ACTION REQUIRED
       disabled: true
 
     - label: "Bring the DUT into a state without any charge faults."
+      PICS: PS.S.A001e
       verification: |
 
       disabled: true
 
     - label: "TH reads the ActiveBatChargeFaults attribute from the DUT"
+      PICS: PS.S.A001e
       verification: |
           ./chip-tool powersource read active-battery-charge-faults 1 1
 
@@ -155,6 +169,7 @@ tests:
       disabled: true
 
     - label: "Set up subscription to BatChargeFaultChange event"
+      PICS: PS.S.E02
       verification: |
           ./chip-tool interactive start
 
@@ -163,7 +178,7 @@ tests:
           [1651671068.817350][6266:6266] CHIP:IM: Received Subscribe request
           [1651671068.817489][6266:6266] CHIP:DMG: SubscribeRequestMessage =
           [1651671068.817529][6266:6266] CHIP:DMG: {
-          [1651671068.817553][6266:6266] CHIP:DMG:         KeepSubscriptions = false,
+          [1651671068.817553][6266:6266] CHIP:DMG:         KeepSubscriptions = false, 
           [1651671068.817612][6266:6266] CHIP:DMG:         MinIntervalFloorSeconds = 0x0,
           [1651671068.817672][6266:6266] CHIP:DMG:         MaxIntervalCeilingSeconds = 0x64,
           [1651671068.817707][6266:6266] CHIP:DMG:         EventPathIBs =
@@ -174,21 +189,23 @@ tests:
           [1651671068.817923][6266:6266] CHIP:DMG:                         Cluster = 0x2f,
           [1651671068.817985][6266:6266] CHIP:DMG:                         Event = 0x2,
           [1651671068.818013][6266:6266] CHIP:DMG:                 },
-          [1651671068.818074][6266:6266] CHIP:DMG:
+          [1651671068.818074][6266:6266] CHIP:DMG:                 
           [1651671068.818129][6266:6266] CHIP:DMG:         ],
-          [1651671068.818159][6266:6266] CHIP:DMG:
-          [1651671068.818228][6266:6266] CHIP:DMG:         isFabricFiltered = true,
+          [1651671068.818159][6266:6266] CHIP:DMG:         
+          [1651671068.818228][6266:6266] CHIP:DMG:         isFabricFiltered = true, 
           [1651671068.818310][6266:6266] CHIP:DMG:         InteractionModelRevision = 1
           [1651671068.818336][6266:6266] CHIP:DMG: },
           [1651671068.818414][6266:6266] CHIP:DMG: Final negotiated min/max parameters: Min = 0s, Max = 100s
       disabled: true
 
     - label: "Bring the DUT into a charge fault state."
+      PICS: PS.S.E02
       verification: |
           DUT ACTION REQUIRED
       disabled: true
 
     - label: "TH reads the ActiveBatChargeFaults attribute from the DUT"
+      PICS: PS.S.A001e
       verification: |
           ./apps/chip-tool powersource read active-battery-charge-faults 1 1
 
@@ -196,6 +213,7 @@ tests:
       disabled: true
 
     - label: "Bring the DUT back into a clean state."
+      PICS: PS.S.E02
       verification: |
           DUT ACTION REQUIRED
       disabled: true
