--- a/src/app/tests/suites/certification/Test_TC_WNCV_2_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_WNCV_2_1.yaml
@@ -80,7 +80,7 @@ tests:
     - label: "1e: read the RW mandatory attribute default: Mode"
       command: "readAttribute"
       attribute: "Mode"
-      PICS: NCV.S.A0017
+      PICS: WNCV.S.A0017
       response:
           constraints:
               type: map8
@@ -90,7 +90,7 @@ tests:
     - label: "1f: write a value into the RW mandatory attribute:: Mode"
       command: "writeAttribute"
       attribute: "Mode"
-      PICS: NCV.S.A0017
+      PICS: WNCV.S.A0017
       arguments:
           value: 0
 
