--- a/BUILD.gn
+++ b/BUILD.gn
@@ -261,6 +261,9 @@ if (current_toolchain != "${dir_pw_toolchain}/default:default") {
     enable_linux_lock_app_build =
         enable_default_builds && (host_os == "linux" || host_os == "mac")
 
+    enable_fuzz_test_targets = 
+        is_clang && (host_os = "linux" || host_os == "mac")
+
     # Build the cc13x2x7_26x2x7 lock app example.
     enable_cc13x2x7_26x2x7_lock_app_build = enable_ti_simplelink_builds
 
@@ -496,6 +499,14 @@ if (current_toolchain != "${dir_pw_toolchain}/default:default") {
     }
   }
 
+  if (enable_fuzz_test_targets) {
+    group("fuzz_tests") {
+      deps = [
+        "${chip_root}/src/lib/core/tests:fuzz-tlv-reader"
+      ]
+    }
+  }
+
   group("default") {
     deps = []
     if (enable_host_clang_build) {
@@ -580,6 +591,9 @@ if (current_toolchain != "${dir_pw_toolchain}/default:default") {
     }
     if (enable_cc13x2x7_26x2x7_all_clusters_app_build) {
       deps += [ ":cc13x2x7_26x2x7_all_clusters_app" ]
+    }
+    if (enable_fuzz_test_targets) {
+      deps += [ ":fuzz_tests" ]
     }
   }
 
