--- a/src/lib/core/tests/BUILD.gn
+++ b/src/lib/core/tests/BUILD.gn
@@ -16,6 +16,8 @@ import("//build_overrides/build.gni")
 import("//build_overrides/chip.gni")
 import("//build_overrides/nlunit_test.gni")
 
+import("${build_root}/config/compiler/compiler.gni")
+
 import("${chip_root}/build/chip/chip_test_suite.gni")
 
 chip_test_suite("tests") {
@@ -37,4 +39,14 @@ chip_test_suite("tests") {
     "${chip_root}/src/lib/support:testing",
     "${nlunit_test_root}:nlunit-test",
   ]
+}
+
+executable("fuzz-tlv-reader") {
+  sources = [ "FuzzTlvReader.cpp" ]
+
+  public_deps = [ "${chip_root}/src/lib/core" ]
+
+  public_configs = [ "//build/config/compiler:libfuzzer_fuzzing" ]
+
+  output_dir = "${root_out_dir}/tests"
 }
