--- a/BUILD.gn
+++ b/BUILD.gn
@@ -261,7 +261,7 @@ if (current_toolchain != "${dir_pw_toolchain}/default:default") {
     enable_linux_lock_app_build =
         enable_default_builds && (host_os == "linux" || host_os == "mac")
 
-    enable_fuzz_test_targets = 
+    enable_fuzz_test_targets =
         is_clang && (host_os = "linux" || host_os == "mac")
 
     # Build the cc13x2x7_26x2x7 lock app example.
@@ -501,9 +501,7 @@ if (current_toolchain != "${dir_pw_toolchain}/default:default") {
 
   if (enable_fuzz_test_targets) {
     group("fuzz_tests") {
-      deps = [
-        "${chip_root}/src/lib/core/tests:fuzz-tlv-reader"
-      ]
+      deps = [ "${chip_root}/src/lib/core/tests:fuzz-tlv-reader" ]
     }
   }
 
