Fuzzert for some chip credentials calls

--- a/src/credentials/tests/BUILD.gn
+++ b/src/credentials/tests/BUILD.gn
@@ -61,3 +61,16 @@ chip_test_suite("tests") {
     "${nlunit_test_root}:nlunit-test",
   ]
 }
+
+executable("fuzz-chip-cert") {
+  sources = [ "FuzzChipCert.cpp" ]
+
+  public_deps = [ "${chip_root}/src/credentials" ]
+
+  public_configs = [
+    "//build/config/compiler:libfuzzer_fuzzing",
+    "//build/config/compiler:sanitize_address",
+  ]
+  
+  output_dir = "${root_out_dir}/tests"
+}
