--- a/BUILD.gn
+++ b/BUILD.gn
@@ -47,7 +47,10 @@ if (current_toolchain != "${dir_pw_toolchain}/default:default") {
 
   if (enable_fuzz_test_targets) {
     group("fuzz_tests") {
-      deps = [ "${chip_root}/src/lib/core/tests:fuzz-tlv-reader" ]
+      deps = [
+         "${chip_root}/src/credentials/tests:fuzz-chip-cert",
+         "${chip_root}/src/lib/core/tests:fuzz-tlv-reader",
+      ]
     }
   }
 
